--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^17.0.2",
     "react-apollo": "^3.1.5",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
